--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "esto-es-challenge",
   "version": "0.1.0",
+  "homepage":"https://cheaguz.github.io/esto-es-challenge" ,
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -12,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
